--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -126,7 +126,7 @@ func main() {
                 	"fmt"
                 	"net/http"
                 )
-                
+
                 func main() {
                 	http.HandleFunc("/hello", func(w http.ResponseWriter, r *http.Request) {
                 		if r.Method == http.MethodGet {
@@ -145,7 +145,27 @@ func main() {
 
           </code></pre>
         </section>
+
         <section>
+            <h3>Golang's Simplicity</h3>
+            <br>
+            <ul>
+                <li>Three data structures: array/slice/maps</li>
+                <li>One loop type</li>
+                <li>Errors are values</li>
+                <li>No mocking</li>
+                <li>No advanced syntax</li>
+                <li>No magical frameworks</li>
+                <li>No ORM</li>
+                <li>Official formatting style</li>
+            </ul>
+        </section>
+
+        <section>
+            <h3>Any advanced syntactic feature can be substituted with finite number of for loops and if-else statements</h3>
+        </section>
+        <section>
+<!--            https://x.com/kitarp29/status/1746515758589596139?lang=bg&mx=2-->
             <h4>Thank You!</h4>
             <h4><a href="https://twitter.com/pivovarit">@pivovarit</a></h4>
             <small><a href="https://4comprehension.com">4comprehension.com</a></small>
