--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -162,10 +162,14 @@ func main() {
         </section>
 
         <section>
+            <img src="img/golang-devs-like.png" width="60%" alt="gopher"/>
+            <small><small><a href="https://x.com/kitarp29/status/1746515758589596139?lang=bg&mx=2">https://x.com/kitarp29/status/1746515758589596139?lang=bg&mx=2</a></small></small>
+        </section>
+
+        <section>
             <h3>Any advanced syntactic feature can be substituted with finite number of for loops and if-else statements</h3>
         </section>
         <section>
-<!--            https://x.com/kitarp29/status/1746515758589596139?lang=bg&mx=2-->
             <h4>Thank You!</h4>
             <h4><a href="https://twitter.com/pivovarit">@pivovarit</a></h4>
             <small><a href="https://4comprehension.com">4comprehension.com</a></small>
