--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -359,6 +359,10 @@ type InMemoryMovieDescriptionsRepository struct {
         </section>
 
         <section>
+            <h3>We can do the same in Java!</h3>
+        </section>
+
+        <section>
             <h3>Golang Memory Model</h3>
             <blockquote>
                 "(...) If you must read the rest of this document to understand the behavior of your program, you are being too clever.
@@ -366,6 +370,8 @@ type InMemoryMovieDescriptionsRepository struct {
                 Don't be clever."
             </blockquote>
         </section>
+
+
 
 
 
