--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -371,10 +371,6 @@ type InMemoryMovieDescriptionsRepository struct {
             </blockquote>
         </section>
 
-
-
-
-
         <section>
             <img src="img/golang-devs-like.png" width="60%" alt="gopher"/>
             <small><small><a href="https://x.com/kitarp29/status/1746515758589596139?lang=bg&mx=2">https://x.com/kitarp29/status/1746515758589596139?lang=bg&mx=2</a></small></small>
@@ -382,6 +378,16 @@ type InMemoryMovieDescriptionsRepository struct {
 
         <section>
             <h3>Any advanced syntactic feature can be substituted with finite number of for loops and if-else statements</h3>
+        </section>
+
+        <section>
+            <h3>Import/Dependency Cycles</h3>
+        </section>
+        <section>
+            <img src="img/import-cycles.png" width="65%" alt="import cycles"/>
+            <br>
+
+            <small><small><a href=" https://github.com/golang/go/issues/30247">https://github.com/golang/go/issues/30247</a></small></small>
         </section>
         <section>
             <h4>Thank You!</h4>
