--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -165,6 +165,10 @@ func main() {
         </section>
 
         <section>
+            <h4>...</h4>
+        </section>
+
+        <section>
             <h3>What's better? tabs or spaces?</h3>
             <div class="fragment">
                 <blockquote>
