--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -48,7 +48,11 @@
         <section>
             <h4>Golang is even more "imperative", "boilerplate-heavy" than Java... and it's proud of that!</h4>
 
-            <img src="img/gopher.png" width="10%" alt="gopher"/>
+            <br>
+            <div>
+                <img src="img/gopher.png" width="10%" alt="gopher"/>
+                <small><small>So what...?</small></small>
+            </div>
         </section>
 
         <section>
@@ -62,6 +66,11 @@
             </ul>
 
             <img src="img/gopher.png" width="10%" alt="gopher"/>
+        </section>
+
+        <section>
+            <h4>Any advanced syntactic feature can be substituted with a finite number of for loops and if-else
+                statements</h4>
         </section>
 
         <section>
@@ -192,6 +201,7 @@ func main() {
             <h4 class="fragment">Should we use optional parentheses around conditions?</h4>
             <h4 class="fragment">Should we follow semantic versioning?</h4>
             <h4 class="fragment">Which static analysis tools should we use?</h4>
+            <h4 class="fragment">...and many others</h4>
         </section>
 
         <section>
@@ -505,11 +515,6 @@ type InMemoryMovieDescriptionsRepository struct {
         <section>
             <img src="img/golang-devs-like.png" width="60%" alt="gopher"/>
             <small><small><a href="https://x.com/kitarp29/status/1746515758589596139?lang=bg&mx=2">https://x.com/kitarp29/status/1746515758589596139?lang=bg&mx=2</a></small></small>
-        </section>
-
-        <section>
-            <h3>Any advanced syntactic feature can be substituted with finite number of for loops and if-else
-                statements</h3>
         </section>
 
         <section>
