--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -74,6 +74,11 @@
         </section>
 
         <section>
+            <img src="img/golang-devs-like.png" width="60%" alt="gopher"/>
+            <small><small><a href="https://x.com/kitarp29/status/1746515758589596139?lang=bg&mx=2">https://x.com/kitarp29/status/1746515758589596139?lang=bg&mx=2</a></small></small>
+        </section>
+
+        <section>
           <pre><code data-trim data-noescape class="stretch">
         	for rowId := 0; rowId < len(pattern)-1; rowId++ {
         		smudges := 0
@@ -503,6 +508,10 @@ type InMemoryMovieDescriptionsRepository struct {
         </section>
 
         <section>
+            <h1>TODO</h1>
+        </section>
+
+        <section>
             <h3>Golang Memory Model</h3>
             <blockquote>
                 "(...) If you must read the rest of this document to understand the behavior of your program, you are
@@ -510,11 +519,6 @@ type InMemoryMovieDescriptionsRepository struct {
 
                 Don't be clever."
             </blockquote>
-        </section>
-
-        <section>
-            <img src="img/golang-devs-like.png" width="60%" alt="gopher"/>
-            <small><small><a href="https://x.com/kitarp29/status/1746515758589596139?lang=bg&mx=2">https://x.com/kitarp29/status/1746515758589596139?lang=bg&mx=2</a></small></small>
         </section>
 
         <section>
