--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -467,7 +467,7 @@ movieRentalService := MovieRentalService{
 					</script>
                 </code></pre>
             <small>Dependency Injection is about external supply of dependencies</small>
-            <small>Dependency Injection Containers are just one of the way to achieve this</small>
+            <small>Dependency Injection Containers are just one way to achieve this</small>
         </section>
 
         <section>
