--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -288,6 +288,7 @@ func main() {
 
                 Don't be clever."
             </blockquote>
+            <small><small><a href="https://go.dev/ref/mem">https://go.dev/ref/mem</a></small></small>
         </section>
 
         <section>
