--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -206,7 +206,7 @@ func main() {
             <h4 class="fragment">Should we use optional parentheses around conditions?</h4>
             <h4 class="fragment">Should we follow semantic versioning?</h4>
             <h4 class="fragment">Which static analysis tools should we use?</h4>
-            <h4 class="fragment">...and many others</h4>
+            <h4 class="fragment">...</h4>
         </section>
 
         <section>
