--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
 <div class="reveal">
+    <div class="footer">socials: <a href="http://twitter.com/pivovarit">@pivovarit</a></div>
     <div class="slides">
         <section>
             <h3>Can a Java Developer Learn Anything...</h3>
@@ -71,11 +72,6 @@
         <section>
             <h4>Any advanced syntactic feature can be substituted with a finite number of for loops and if-else
                 statements</h4>
-        </section>
-
-        <section>
-            <img src="img/golang-devs-like.png" width="60%" alt="gopher"/>
-            <small><small><a href="https://x.com/kitarp29/status/1746515758589596139?lang=bg&mx=2">https://x.com/kitarp29/status/1746515758589596139?lang=bg&mx=2</a></small></small>
         </section>
 
         <section>
@@ -166,7 +162,6 @@ func main() {
             <ul>
                 <li>Three data structures: array/slice/maps</li>
                 <li>One loop type</li>
-                <li>Errors are values</li>
                 <li>No mocking</li>
                 <li>No advanced syntax</li>
                 <li>No magical frameworks</li>
@@ -535,10 +530,6 @@ type InMemoryMovieDescriptionsRepository struct {
         </section>
 
         <section>
-            <h1>TODO</h1>
-        </section>
-
-        <section>
             <pre><code data-trim data-noescape class="stretch">
             class MovieRentalService {
                 private final RentalHistoryRepository rentalHistoryRepository;
@@ -660,7 +651,8 @@ type InMemoryMovieDescriptionsRepository struct {
         <section>
             <video
                     data-autoplay
-                    src="img/near-compile-time-sudoku.mov"
+                    loop="loop"
+                    src="img/near-compile-time.mov"
             ></video>
             <small><small>inspired by: <a href="https://x.com/xuwei_k/status/1832381681795526846">compile-time sudoku solver in Scala</a></small></small>
         </section>
@@ -807,10 +799,51 @@ static final ArchRule shouldBeFreeOfCycles = slices()
 
             </code></pre>
                 <small><small><a href="https://www.archunit.org/">https://www.archunit.org/</a></small></small>
-
             </div>
+        </section>
 
+            <section>
+                <h3>Errors as Values</h3>
+            </section>
 
+            <section>
+                <blockquote>
+                    "Values can be programmed, and since errors are values, errors can be programmed. <strong>Errors are not
+                    like exceptions. There’s nothing special about them</strong>, whereas an unhandled exception can crash
+                    your program."
+                </blockquote>
+                <small>
+                    <a href="https://blog.golang.org/errors-are-values">"Errors are values", Rob Pike</a>
+                </small>
+            </section>
+
+        <section>
+            <pre><code data-trim>func foo(s string) (string, error) { ... }</code></pre>
+            <pre class="fragment"><code class="center" data-trim>
+                response, err := foo("42")
+                if err != nil {
+                    // ...
+                }
+            </code></pre>
+        </section>
+
+            <section>
+                <img src="img/golang-devs-like.png" width="60%" alt="gopher"/>
+                <small><small><a href="https://x.com/kitarp29/status/1746515758589596139?lang=bg&mx=2">https://x.com/kitarp29/status/1746515758589596139?lang=bg&mx=2</a></small></small>
+            </section>
+
+            <section>
+                <h3>Limited Options for Java</h3>
+                <ul>
+                    <li>Use Records to return errors alongside results</li>
+                    <li>Use Either from Vavr</li>
+                </ul>
+            </section>
+
+        <section>
+            <blockquote>
+                Using common sense is the ultimate Best Practice™.
+            </blockquote>
         </section>
         <section>
             <h4>Thank You!</h4>
@@ -821,10 +854,6 @@ static final ArchRule shouldBeFreeOfCycles = slices()
             <br>
             <small><a href="https://pivovarit.github.io/talks/learn-from-go">https://pivovarit.github.io/talks/learn-from-go</a></small>
         </section>
-
-        <div class="footer">
-            <a href="https://twitter.com/pivovarit">@pivovarit</a>
-        </div>
     </div>
 </div>
 
@@ -842,17 +871,21 @@ static final ArchRule shouldBeFreeOfCycles = slices()
         // Learn about plugins: https://revealjs.com/plugins/
         plugins: [RevealMarkdown, RevealHighlight, RevealNotes]
     });
+
+    Reveal.configure({
+        controls: false,
+    });
 </script>
 </body>
 <style>
     .footer {
         position: fixed;
         bottom: 0;
-        width: 100%;
+        width: 98%;
         color: black;
         text-align: right;
-        padding: 10px 0;
-        font-size: 16px;
+        padding: 10px 0px;
+        font-size: 60%;
     }
 </style>
 </html>
