--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -665,7 +665,7 @@ type InMemoryMovieDescriptionsRepository struct {
 
 
 
-        <section>
+        <section data-transition="fade-out">
             <h5>Works on every domain</h5>
 
             <video
@@ -676,7 +676,7 @@ type InMemoryMovieDescriptionsRepository struct {
         </section>
 
 
-        <section data-transition="zoom">
+        <section data-transition="zoom-in fade-out">
             <h5>This is Hexagonal Architecture (Ports and Adapters)</h5><br>
             <img src="img/hexagonal.png" width="70%" alt="hexagonal"/>
             <small><small><a
