--- a/talks/index.html
+++ b/talks/index.html
@@ -38,6 +38,15 @@
         <td style="background: #ffffff" colspan="5" align="center">2025</td>
     </tr>
 
+
+    <tr>
+        <td></td>
+        <td data-location="52.22270422499571, 21.006949415482094" data-place="MiNI">YavaConf 2023</td>
+        <td><a href="https://warszawskiedniinformatyki.pl">Embracing Microservices</a></td>
+        <td>05.04.2025</td>
+        <td>Warsaw/Poland</td>
+    </tr>
+
     <tr>
         <td></td>
         <td data-location="46.005145,8.956409" data-place="Palazzo Congressi">VoxxedDaysTicino 2025</td>
