--- a/talks/index.html
+++ b/talks/index.html
@@ -41,7 +41,7 @@
 
     <tr>
         <td></td>
-        <td data-location="52.22270422499571, 21.006949415482094" data-place="MiNI">YavaConf 2023</td>
+        <td data-location="52.22270422499571, 21.006949415482094" data-place="MiNI">WDI 2024</td>
         <td><a href="https://warszawskiedniinformatyki.pl">Embracing Microservices</a></td>
         <td>05.04.2025</td>
         <td>Warsaw/Poland</td>
