--- a/talks/index.html
+++ b/talks/index.html
@@ -38,11 +38,18 @@
         <td style="background: #ffffff" colspan="5" align="center">2025</td>
     </tr>
 
+    <tr>
+        <td></td>
+        <td data-location="52.23363895794495, 21.0019294111386" data-place="WFC">JEurope</td>
+        <td><a href="https://jeurope.pl">What Can a Java Developer Learn from Golang?</a></td>
+        <td>10.06.2025</td>
+        <td>Warsaw/Poland</td>
+    </tr>
 
     <tr>
         <td></td>
         <td data-location="52.22270422499571, 21.006949415482094" data-place="MiNI">WDI 2024</td>
-        <td><a href="https://warszawskiedniinformatyki.pl">Embracing Microservices</a></td>
+        <td><a href="https://warszawskiedniinformatyki.pl">What Can a Java Developer Learn from Golang?</a></td>
         <td>05.04.2025</td>
         <td>Warsaw/Poland</td>
     </tr>
