--- a/talks/index.html
+++ b/talks/index.html
@@ -56,6 +56,14 @@
 
     <tr>
         <td></td>
+        <td data-location="50.25292207906272, 19.023493147612825" data-place="Strefa Centralna">MergeIT</td>
+        <td><a href="https://merge-it.pl">JEP 485: Breathing New Life into Java Stream API</a></td>
+        <td>27.03.2024</td>
+        <td>Katowice/Poland</td>
+    </tr>
+
+    <tr>
+        <td></td>
         <td data-location="46.005145,8.956409" data-place="Palazzo Congressi">VoxxedDaysTicino 2025</td>
         <td><a href="https://ticino.voxxeddays.com">What Can a Java Developer Learn from Golang?</a></td>
         <td>17.01.2025</td>
