--- a/talks/index.html
+++ b/talks/index.html
@@ -48,6 +48,14 @@
 
     <tr>
         <td></td>
+        <td data-location="51.24688436621264, 22.548454825780833" data-place="Centrum Spotkan Kultur">IT Unplugged</td>
+        <td><a href="https://www.it-unplugged.com">What Can a Java Developer Learn from Golang?</a></td>
+        <td>10.06.2025</td>
+        <td>Lublin/Poland</td>
+    </tr>
+
+    <tr>
+        <td></td>
         <td data-location="52.22270422499571, 21.006949415482094" data-place="MiNI">WDI 2024</td>
         <td><a href="https://warszawskiedniinformatyki.pl">What Can a Java Developer Learn from Golang?</a></td>
         <td>05.04.2025</td>
