--- a/talks/index.html
+++ b/talks/index.html
@@ -40,6 +40,14 @@
 
     <tr>
         <td></td>
+        <td data-location="50.048165,19.931766" data-place="ICE Cracow">DevoxxPL 2025</td>
+        <td><a href="https://devoxx.pl/">What Can a Java Developer Learn from Golang?</a></td>
+        <td>11.06.2022</td>
+        <td>Cracow/Poland</td>
+    </tr>
+
+    <tr>
+        <td></td>
         <td data-location="52.23363895794495, 21.0019294111386" data-place="WFC">JEurope</td>
         <td><a href="https://jeurope.pl">What Can a Java Developer Learn from Golang?</a></td>
         <td>10.06.2025</td>
