--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -31,7 +31,7 @@
             <h2>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h2>
             <h4>Independent Consultant/Trainer</h4>
             <small>distributed systems | microservices | async | reactive | java | idiomatic go</small>
-            <h4>WarsawJUG | Vavr Leader</h4>
+            <h4>WarsawJUG | Vavr Leader | Oracle ACE</h4>
             <h5><a href="https://twitter.com/pivovarit">@pivovarit</a></h5>
             <br>
         </section>
