--- a/talks/index.html
+++ b/talks/index.html
@@ -40,6 +40,22 @@
 
     <tr>
         <td></td>
+        <td data-location="38.91347454196663, -104.82988265712038" data-place="Colorado Springs Marriott">dev2next</td>
+        <td><a href="https://www.dev2next.com">What Can You Learn from Golang?</a></td>
+        <td>1.10.2025</td>
+        <td>Colorado Springs/USA</td>
+    </tr>
+
+    <tr>
+        <td></td>
+        <td data-location="38.91347454196663, -104.82988265712038" data-place="Colorado Springs Marriott">dev2next</td>
+        <td><a href="https://www.dev2next.com">Virtual Threads in Action</a></td>
+        <td>1.10.2025</td>
+        <td>Colorado Springs/USA</td>
+    </tr>
+
+    <tr>
+        <td></td>
         <td data-location="50.048165,19.931766" data-place="ICE Cracow">DevoxxPL 2025</td>
         <td><a href="https://devoxx.pl/">What Can a Java Developer Learn from Golang?</a></td>
         <td>11.06.2025</td>
@@ -57,7 +73,7 @@
     <tr>
         <td></td>
         <td data-location="51.24688436621264, 22.548454825780833" data-place="Centrum Spotkan Kultur">IT Unplugged</td>
-        <td><a href="https://www.it-unplugged.com">What Can a Java Developer Learn from Golang?</a></td>
+        <td><a href="https://www.it-unplugged.com">What Can You Learn from Golang?</a></td>
         <td>10.06.2025</td>
         <td>Lublin/Poland</td>
     </tr>
