--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -20,7 +20,7 @@
     <div class="footer">socials: <a href="http://twitter.com/pivovarit">@pivovarit</a></div>
     <div class="slides">
         <section>
-            <h3>Can a Java Developer Learn Anything...</h3>
+            <h3>Can You Learn Anything...</h3>
             <h4>From Golang?</h4>
             <br><br>
             <h4><a href="https://pivovarit.github.io"> Grzegorz Piwowarek</a></h4>
