--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -162,10 +162,11 @@ func main() {
             <ul>
                 <li>Three data structures: array/slice/maps</li>
                 <li>One loop type</li>
+                <li>No inheritance</li>
                 <li>No mocking</li>
                 <li>No advanced syntax</li>
-                <li>No magical frameworks</li>
-                <li>No ORM</li>
+                <li>No magical frameworks - wiring is explicit</li>
+                <li>No ORMs by default</li>
             </ul>
         </section>
 
@@ -188,19 +189,22 @@ func main() {
         </section>
 
         <section>
-            <h3>Go Reduces Bikeshedding</h3>
-            <img src="img/styles.jpg" width="60%" alt="gopher"/>
-            <small><small><a
-                    href="https://www.reddit.com/r/ProgrammerHumor/comments/137drsn/i_cant_fathom_how_any_of_those_could_be_used/">https://www.reddit.com/r/ProgrammerHumor/comments/137drsn/i_cant_fathom_how_any_of_those_could_be_used/</a></small></small>
+            <h3>Less time debating. More time shipping.</h3>
         </section>
 
         <section>
-            <h3>No room for questions like:</h3>
-            <h4 class="fragment">What build tool should we use?</h4>
-            <h4 class="fragment">Should we use spaces or tabs?</h4>
-            <h4 class="fragment">Should we use optional parentheses around conditions?</h4>
-            <h4 class="fragment">Should we follow semantic versioning?</h4>
-            <h4 class="fragment">Which static analysis tools should we use?</h4>
+            <h3>Go Reduces Bikeshedding</h3>
+            <img src="img/styles.jpg" width="60%" alt="gopher"/>
+            <small><small><a href="https://www.reddit.com/r/ProgrammerHumor/comments/137drsn/i_cant_fathom_how_any_of_those_could_be_used/">https://www.reddit.com/r/ProgrammerHumor/comments/137drsn/i_cant_fathom_how_any_of_those_could_be_used/</a></small></small>
+        </section>
+
+        <section>
+            <h3>No bikeshedding over:</h3>
+            <h4 class="fragment">Tabs vs. spaces</h4>
+            <h4 class="fragment">Build tools</h4>
+            <h4 class="fragment">Parentheses around conditions</h4>
+            <h4 class="fragment">Semantic versioning</h4>
+            <h4 class="fragment">Which linter to use</h4>
             <h4 class="fragment">...</h4>
         </section>
 
@@ -314,6 +318,7 @@ func main() {
                 Don't be clever."
             </blockquote>
             <small><small><a href="https://go.dev/ref/mem">https://go.dev/ref/mem</a></small></small>
+
         </section>
 
         <section>
@@ -333,6 +338,10 @@ func main() {
 }
           </code></pre>
 
+        </section>
+
+        <section>
+            <h4><a href=" https://www.youtube.com/watch?v=zwZ1EZqe7NQ">The Hidden Art of Thread-Safe Programming: Exploring java.util.concurrent, Heinz Kabutz</a></h4>
         </section>
 
         <section>
