--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -19,6 +19,7 @@
 <div class="reveal">
     <div class="footer">socials: <a href="http://twitter.com/pivovarit">@pivovarit</a></div>
     <div class="slides">
+        <section data-background-image="img/devoxx.jpeg"></section>
         <section>
             <h3>Can a Java Developer Learn Anything...</h3>
             <h4>From Golang?</h4>
@@ -866,7 +867,9 @@ static final ArchRule shouldBeFreeOfCycles = slices()
             </blockquote>
         </section>
         <section>
-            <h4>Thank You!</h4>
+            <h2>Thank You!</h2>
+            <h5>Need help? Reach out! It's free.</h5>
+
             <h4><a href="https://twitter.com/pivovarit">@pivovarit</a></h4>
             <small><a href="https://4comprehension.com">4comprehension.com</a></small>
             <br>
