--- a/talks/index.html
+++ b/talks/index.html
@@ -56,6 +56,14 @@
 
     <tr>
         <td></td>
+        <td data-location="59.950481960858255, 11.05043708447923" data-place="NOVA Spektrum">JavaZone 2025</td>
+        <td><a href="https://2025.javazone.no/en">What Can a Java Developer Learn from Golang?</a></td>
+        <td>3.09.2025</td>
+        <td>Oslo/Norway</td>
+    </tr>
+
+    <tr>
+        <td></td>
         <td data-location="50.048165,19.931766" data-place="ICE Cracow">DevoxxPL 2025</td>
         <td><a href="https://devoxx.pl/">What Can a Java Developer Learn from Golang?</a></td>
         <td>11.06.2025</td>
