--- a/talks/index.html
+++ b/talks/index.html
@@ -40,6 +40,14 @@
 
     <tr>
         <td></td>
+        <td data-location="50.012639, 19.924074" data-place="Hotel Metropolo">JDD 2025</td>
+        <td><a href="https://jdd.org.pl">What Can a Java Developer Learn from Golang?</a></td>
+        <td>21.10.2024</td>
+        <td>Cracow/Poland</td>
+    </tr>
+
+    <tr>
+        <td></td>
         <td data-location="38.91347454196663, -104.82988265712038" data-place="Colorado Springs Marriott">dev2next</td>
         <td><a href="https://www.dev2next.com">What Can You Learn from Golang?</a></td>
         <td>1.10.2025</td>
